[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["whs <hswongac@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
